# Slavik

./: .ccls  .gitignore  CMakeLists.txt  cp866.cpp  cp866.h  font.cpp  font.h  fsmgr.cpp  fsmgr.h  game.cpp  game.h  game_arrows.cpp  game_character.cpp  game_data.cpp  game_input.cpp  game_item.cpp  game_locale.cpp  game_locale.h  game_loot.cpp  game_mixture_info.cpp  game_newgame.cpp  game_pathfind.cpp  game_placeoff.cpp  game_play.cpp  game_quest.cpp  game_sound.cpp  game_soundres.cpp  game_state.cpp  game_trade.cpp  game_ui.cpp  game_village.cpp  gfx.cpp  gfx.h  glfuncs.cpp  glfuncs.h  locale.cpp  locale.h  main.cpp  matrix.h  resources.cpp  (+4 more)
common/: common.h  plane.h  strutils.cpp  strutils.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
nbproject/private/: configurations.xml  private.xml
res/: font0.res  font1.res  font2.res  font3.res
simix/: dcb.cpp  mix.cpp  mixbuffer.cpp  music.cpp  music_ogg.cpp  music_ogg.h  simix.cpp  simix.h
